--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -33,7 +33,7 @@
 }
 
 .projects-section {
-    background-color: var(--white-color);
+    background-color: var(--section-color);
 }
 
 .projects-section a {
