--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap');
 .navbar {
     background-color: var(--white-color) !important;
 }
@@ -13,4 +14,7 @@
 
 .navbar .btn:focus {
     box-shadow: none;
+}
+.logo {
+    font-family: 'Oleo Script Swash Caps', cursive;
 }
